fix video overflow on mobile project about view

--- a/app/assets/stylesheets/catarse_bootstrap/_extra.sass
+++ b/app/assets/stylesheets/catarse_bootstrap/_extra.sass
@@ -105,6 +105,11 @@ select.date
       padding-right: 0px
 
 
+@media (max-width: 479px)
+  iframe
+    width: 100%
+    height: 100%
+
 // Edit contribution page
 
 .text-field.checkbox-fix
